syntax = "proto3";

package grpc;

option go_package = "github.com/DavidLakeT/djcardonan-st0263/proto";

message FilesResponse {
  string file_list = 1;
  int32 file_amount = 2;
}

message ListFilesRequest {
  optional int32 limit = 1;
}

message SearchFilesRequest {
  string pattern = 1;
}

service FilesInformation {
  rpc ListFiles (ListFilesRequest) returns (FilesResponse) {}
  rpc SearchFiles (SearchFilesRequest) returns (FilesResponse) {}
}